updating data_gen code

--- a/vignettes/S01-generate_sim_data.Rmd
+++ b/vignettes/S01-generate_sim_data.Rmd
@@ -195,7 +195,7 @@ ggplot(data=filter(sim_dat_e3, rep==1, func=="var-p-width"))+
 x <- seq(0,1,length = 21)
 n <- c(21, 42, 63, 84, 105)
 dup <- c(1, 2, 3, 4, 5)
-rep <- 1
+rep <- 1000
 
 # Experiment 4 ####
 error <- 0.5 ######TO BE CHANGED
@@ -215,7 +215,7 @@ sim_dat_e4 <- sim_dat_e4%>%
   dplyr::filter((func=="var-scale" & (param <=0.66 &param>0.24 |param>0.91))|
                   (func=="var-curvature" & (param>0.24 & param<=0.81 | param>0.91))|
                   func == "var-location")%>%
-  dplyr::group_by(func, param, error, rep)%>%
+  dplyr::group_by(func, param, error, rep, dup)%>%
   dplyr::mutate(sample_id = cur_group_id(), 
                 scenario_id = paste0(func,"_p", param, "_n", dup, "_e", error))%>%
   dplyr::mutate(y_true_unscaled = dplyr::case_when(
@@ -227,8 +227,8 @@ sim_dat_e4 <- sim_dat_e4%>%
   dplyr::mutate(y = y_true + rnorm(n = n(),mean = 0, sd = error))%>%
   dplyr::ungroup()
 
-# setwd("~/Documents/Pedersen2023/Peaks/lextremagam/data-raw/sim/data")
-# write_parquet(x = sim_dat_e1, "data-raw/sim/data/sim_dat_e4.parquet")
+setwd("~/Documents/Pedersen2023/Peaks/lextremagam/data-raw/sim/data")
+write_parquet(x = sim_dat_e4, "sim_dat_e4.parquet")
 
 
 ggplot(data=filter(sim_dat_e4, rep==1))+
